Fixed images on iphone

--- a/css/utils/_cookies.less
+++ b/css/utils/_cookies.less
@@ -10,7 +10,7 @@
   height: 60px;
   .cookies-body {	
     font-weight: 300;
-    font-size: 20px;
+    font-size: 16px;
     margin: 0;
     letter-spacing: 1.3px;
     text-transform: uppercase;
@@ -23,7 +23,7 @@
       padding: 0px;
       font-weight: 500;
       text-align: center;
-      font-size: 20px;
+      font-size: 16px;
       color: #274467;
       position: absolute;
       transform: translateY(-50%);
