--- a/css/utils/_on-appstore.less
+++ b/css/utils/_on-appstore.less
@@ -9,9 +9,11 @@
 	.tcycle {
 		position: relative;
 		height: 649px;
+		right: 24px;
+    bottom: 20px;
 		display: none;
 		img {
-			height: 490px;
+			height: 635px;
 		}
 	}
 }
